--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
       </div>
       <button type="button" id="search-btn" class="btn btn-primary mb-2">Search</button>
     </div>
+    <!-- sppiner -->
+    <!-- <div id="loading-spinner" class="d-none d-flex justify-content-center my-5 main">
+      <div class="spinner-grow" role="status">
+        
+      </div>
+    </div> -->
     
     <section class="images">
       <div class="justify-content-around align-items-center mt-3 gallery-header mb-2">
