--- a/index.html
+++ b/index.html
@@ -26,16 +26,11 @@
     </div>
     <!-- sppiner -->
     <div id="loading-spinner" class="d-none mx-auto py-5">
-      <div class="mx-auto d-flex justify-content-center spinner-grow" role="status">
+      <div class="mx-auto d-flex justify-content-center spinner-border text-danger" role="status">
         <span class="sr-only">Loading...</span>
       </div>
     </div>
-    <!-- <div id="loading-spinner" class="d-flex justify-content-center my-5 d-none">
-      <div class="spinner-grow" role="status">
-        
-      </div>
-    </div> -->
-
+    
     <section class="images">
       <div class="justify-content-around align-items-center mt-3 gallery-header mb-2">
         <h3 class="head-title text-center">Select image for create slider</h3>
